--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -38,7 +38,7 @@
           >Metacritic</a>
         </div>
       </div>
-      <!-- <app-game-tabs [game]="game"></app-game-tabs> -->
+      <app-game-tabs [game]="game"></app-game-tabs>
       <!-- end of details-wrapper -->
     </div>
     <!-- end of gameContent -->
